# momodkr-ai-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/data/: binance_vision_v1.yaml
configs/env/: momodkr_v1.yaml
configs/live/: governor_v1.yaml
configs/training/: curriculum_v1.yaml  sweep_v1.yaml  v1_engine_cold.yaml  v1_walkforward.yaml
data/collectors/: asset_config.py  binance_vision_l2_collector.py  r2_funding_fetcher.py
data/preprocessors/: episode_builder.py  feature_engineer.py  feature_stats.py  microstructure_features.py  momentum_features.py
data/reconstructors/: order_book_reconstructor.py
data/validators/: validate_l2_data.py
docs/: LESSONS_LEARNED_FROM_MOLEAPP.md  RUNPOD_DATA_PREP_GUIDE.md  RUNPOD_TRAINING_GUIDE.md
envs/: base_hft_env.py  market_simulator.py  momodkr_env.py
envs/reward/: breadcrumb.py  pnl_reward.py  risk_penalties.py  wrappers.py
runpod/: bg.sh  run_ingest.sh  setup.sh
scripts/: build_features.py  evaluate_best_checkpoint.py  export_onnx.py  mann_whitney_gate.py  prepare_l2_dataset.py  r2_sync.py  rank_candidates.py  run_random_baseline.py  screen_sweep_winners.py  split_eval_holdout.py  validate_onnx_parity.py  walk_forward.py
serving/: feature_version.py  norm_bundle.py
tests/: conftest.py  test_action_queue_latency.py  test_book_reconstructor.py  test_curriculum.py  test_environment.py  test_episode_builder.py  test_feature_engineer.py  test_feature_stats.py  test_feature_version.py  test_l2_collector.py  test_market_simulator.py  test_microstructure_features.py  test_momentum_features.py  test_multi_symbol_env.py  test_norm_bundle.py  test_onnx_export_and_parity.py  test_overfit_smoke.py  test_repo_layout.py  test_reward.py  test_reward_wrappers.py  test_training_smoke.py  test_training_utils.py  test_validate_l2_data.py  test_walk_book_and_ticks.py  test_walk_forward.py
training/: curriculum.py  train_ppo.py  utils.py
(+4 files in other folders)
