[project]
name = "momodkr-ai-agent"
version = "0.1.0"
description = "HFT scalping AI agent for Hyperliquid Vaults"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # RL framework
    "stable-baselines3>=2.3.0",
    "sb3-contrib>=2.3.0",
    "gymnasium>=0.29.1",
    "torch>=2.2.0",

    # ONNX export + inference parity
    "onnx>=1.16.0",
    "onnxruntime>=1.18.0",

    # Data pipeline
    "polars>=1.0.0",
    "pyarrow>=16.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",

    # Hyperliquid
    "hyperliquid-python-sdk>=0.7.0",
    "eth-account>=0.13.0",
    "websockets>=12.0",
    "httpx>=0.27.0",

    # Secrets — Akeyless (per user preference, not AWS SM / 1Password)
    "akeyless>=4.0.0",
    "akeyless-cloud-id>=0.2.0",

    # Observability
    "wandb>=0.17.0",
    "matplotlib>=3.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "ipython>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "envs*", "training*", "evaluation*", "scripts*", "serving*", "live*"]
exclude = ["tests*", "execution*", "runpod*", "configs*", "docs*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that take >5s",
    "integration: marks tests that hit live services (HL testnet, Akeyless, R2)",
]
